[JENKINS-40877] fix alignment of PR link icon

--- a/blueocean-dashboard/src/main/less/run-details-header.less
+++ b/blueocean-dashboard/src/main/less/run-details-header.less
@@ -47,22 +47,22 @@
             overflow: hidden;
             white-space: nowrap;
         }
-        
+
         span {
             display: block;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            align-items: center;
-     
+
             svg {
+                display: block;
                 fill: #ffffff;
                 opacity: 50%;
                 margin-left: 3px;
             }
         }
 
-        
+
     }
 }
 
